--- a/gezichtscrèmes.html
+++ b/gezichtscrèmes.html
@@ -39,7 +39,12 @@
 	</nav>
 
 	<main>
+
+		<audio class="audio2" src="/sounds/toy-singing-santa-claus-is-coming-to-town-26255.mp3"></audio>
+
 		<h1>Gezichtscrèmes</h1>
+		<p>pssst klik eens op de S van Santa Claus</p>
+		<button class="kerst" onclick="ChangeColors()">Het is bijna kerst</button>
 
 		<!-- section 1 -->
 		<div>
@@ -133,7 +138,6 @@
 				<p>Nederland</p>
 				<h4>Taal</h4>
 				<p>Nederlands</p>
-				<!-- <button>Doorgaan</button> -->
 		</section>
 	</footer>
 
