--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 		<p class="winkelwagen1">1</p>
 		<p class="winkelwagen2">2</p>
 		<img onclick="OpenMenu()" src="/images/hamburgermenu.png" alt="menu">
-		<!-- <a class="hamburgermenu" onclick="OpenMenu()" href="/gezichtscrèmes.html"> <img src="/images/hamburgermenu.png" alt="menu"></a> -->
 		<h1><a href="/gezichtscrèmes.html"> <img src="/images/logo.webp" alt="Rituals Logo"></a></h1>
-		<!-- <a href="/gezichtscrèmes.html"> <img src="/images/logo.webp" alt="Rituals Logo"></a> -->
 		<a href="/gezichtscrèmes.html"> <img src="/images/loop.png" alt="zoeken"></a>
 		<a href="/gezichtscrèmes.html"> <img src="/images/profiel.png" alt="mijn profiel"></a>
 		<a href="/gezichtscrèmes.html"> <img src="/images/mandje.png" alt="winkelmandje"></a>
@@ -43,6 +41,7 @@
 	</header>
 
 	<main>
+		<audio src="/sounds/santa-claus-laughing-63389.mp3"></audio>
 
 		<!-- section 1 -->
 		<section>
@@ -94,7 +93,7 @@
 			<p>Ontvang een 2-staps thuisspa-routine met interieurparfum en shower foam bij besteding van €45 of meer.
 			</p>
 			<button>SHOP NU</button>
-			<img src="/images/plaatje1.png" alt="The ritual of Hammam producten">
+			<img src="/bannerimages/plaatje1.png" alt="The ritual of Hammam producten">
 		</section>
 
 		<!-- section 4 -->
@@ -103,7 +102,7 @@
 			<h4>Your Authentic Spa Experience</h4>
 			<p>Ontdek onze vernieuwde thuisspa-collectie met arganolie, eucalyptus en nieuwe innovatieve producten.</p>
 			<a href="">ONTDEK THUISSPA-COLLECTIE</a>
-			<img src="/images/Plaatje2.png" alt="mensen in de sauna">
+			<img src="/bannerimages/Plaatje2.png" alt="mensen in de sauna">
 		</section>
 
 		<!-- section 5 -->
@@ -184,6 +183,7 @@
 					<button onclick="toggleWinkelwagen()">SHOP</button>
 				</article>
 			</div>
+			<!-- bron: https://www.w3schools.com/cssref/css3_pr_overflow-y.php -->
 		</section>
 
 		<!-- section 6 -->
@@ -194,7 +194,7 @@
 				in
 				plaats van €13,90.*</p>
 			<a href="">SHOP JING SERUMS</a>
-			<img src="/images/plaatjesection6.png" alt="Ritual of Jing flesjes">
+			<img src="/bannerimages/plaatjesection6.png" alt="Ritual of Jing flesjes">
 		</section>
 
 		<!-- section 7 -->
@@ -205,14 +205,13 @@
 				een
 				exfoliërende scrub bar. </p>
 			<a href="">SHOP REINIGINGSBARS</a>
-			<img src="/images/plaatjesection7.png" alt="clean beauty bar">
+			<img src="/bannerimages/plaatjesection7.png" alt="clean beauty bar">
 		</section>
 
 		<!-- section 8 -->
 		<section>
 			<h3>Het beste voor jou</h3>
 			<h4>Home Essentials</h4>
-
 
 			<div>
 				<article>
@@ -304,7 +303,7 @@
 			<p>Verwen je huid na het douchen met een unieke, snel absorberende mousse. Nu verkrijgbaar in vier geuren.
 			</p>
 			<a href="">SHOP BODY LOTION MOUSSE</a>
-			<img src="/images/plaatjesection9.png" alt="">
+			<img src="/bannerimages/plaatjesection9.png" alt="">
 		</section>
 
 		<!-- section 10 -->
@@ -314,7 +313,7 @@
 			<p>LINDA.lab heeft onze nieuwe dagcrème getest en de resultaten zijn fantastisch! 84% van de testers is mega
 				fan.</p>
 			<a href="">SHOP DAGCRÈME</a>
-			<img src="/images/plaatjesection10.png" alt="Getest door de lezers van Linda">
+			<img src="/bannerimages/plaatjesection10.png" alt="Getest door de lezers van Linda">
 		</section>
 
 		<!-- section 11 -->
@@ -325,7 +324,7 @@
 				onze
 				hulpbronnen te behouden.</p>
 			<a href="">ONTDEK MEER</a>
-			<img src="/images/plaatjesection11.png" alt="vijfer met bomen">
+			<img src="/bannerimages/plaatjesection11.png" alt="vijfer met bomen">
 		</section>
 
 		<!-- section 12 -->
@@ -337,8 +336,8 @@
 				werking.</p>
 			<a href="">ONTDEK MEER</a>
 
-			<img src="/images/plaatjesection12.png" alt="vrouw smeert bodylotion">
-			<img src="/images/plaatje2section12.png" alt="vrouw op smartphone">
+			<img src="/bannerimages/plaatjesection12.png" alt="vrouw smeert bodylotion">
+			<img src="/bannerimages/plaatje2section12.png" alt="vrouw op smartphone">
 		</section>
 
 		<!-- section 13 -->
@@ -382,7 +381,6 @@
 				<p>Nederland</p>
 				<h4>Taal</h4>
 				<p>Nederlands</p>
-				<!-- <button>Doorgaan</button> -->
 		</section>
 	</footer>
 
@@ -400,6 +398,4 @@ hamburgermenu File:Hamburger Icon White.svg - Wikimedia Commons. (2019, 20 augus
 rituals logo Home. (2022, 16 augustus). Rituals. https://careers.rituals.com/be/nl/home
 mandje Star Network. (z.d.). White Cart 73 icon - Free White Cart icons. https://www.iconsdb.com/white-icons/cart-73-icon.html 
 Profiel Star Network. (z.d.-b). White User Icon - Free White User icons. https://www.iconsdb.com/white-icons/user-icon.html
-
-
 -->
