--- a/gezichtscrèmes.html
+++ b/gezichtscrèmes.html
@@ -16,7 +16,7 @@
 	<nav>
 		<p class="winkelwagen1">1</p>
 		<p class="winkelwagen2">2</p>
-		<img onclick="OpenMenu()" src="/images/hamburgermenu.png" alt="menu">
+		<img class="hamburgerImg" src="/images/hamburgermenu.png" alt="menu">
 		<!-- <a class="hamburgermenu" onclick="OpenMenu()" href="/gezichtscrèmes.html"> <img src="/images/hamburgermenu.png" alt="menu"></a> -->
 		<a href="/index.html"> <img src="/images/logo.webp" alt="Rituals Logo"></a>
 		<!-- <a href="/gezichtscrèmes.html"> <img src="/images/logo.webp" alt="Rituals Logo"></a> -->
@@ -27,7 +27,7 @@
 	</nav>
 	<nav class="hamburgermenu">
 		<div>
-			<img onclick="CloseMenu()" src="/images/kruis.png" alt="Kruisje">
+			<img class="kruisjeImg" src="/images/kruis.png" alt="Kruisje">
 		</div>
 		<p>Nieuw</p>
 		<p>Body</p>
@@ -41,10 +41,11 @@
 	<main>
 
 		<audio class="audio2" src="/sounds/toy-singing-santa-claus-is-coming-to-town-26255.mp3"></audio>
+		<!-- Bron: https://pixabay.com/ -->
 
 		<h1>Gezichtscrèmes</h1>
 		<p>pssst klik eens op de S van Santa Claus</p>
-		<button class="kerst" onclick="ChangeColors()">Het is bijna kerst</button>
+		<button class="kerst">Het is bijna kerst</button>
 
 		<!-- section 1 -->
 		<div>
@@ -55,7 +56,7 @@
 					<p>The Ritual of Namaste, antiverouderende dagcrème, 50 ml</p>
 					<div>
 						<p>€35,90</p>
-						<button onclick="toggleWinkelwagen()">SHOP</button>
+						<button>SHOP</button>
 					</div>
 				</article>
 
@@ -65,7 +66,7 @@
 					<p>The Ritual of Namaste, antiverouderende dagcrème, 50 ml</p>
 					<div>
 						<p>€35,90</p>
-						<button onclick="toggleWinkelwagen()">SHOP</button>
+						<button>SHOP</button>
 					</div>
 				</article>
 			</section>
@@ -82,7 +83,7 @@
 					<p>The Ritual of Namaste, antiverouderende dagcrème, 50 ml</p>
 					<div>
 						<p>€35,90</p>
-						<button onclick="toggleWinkelwagen()">SHOP</button>
+						<button>SHOP</button>
 					</div>
 				</article>
 
@@ -92,7 +93,7 @@
 					<p>The Ritual of Namaste, antiverouderende dagcrème, 50 ml</p>
 					<div>
 						<p>€35,90</p>
-						<button onclick="toggleWinkelwagen()">SHOP</button>
+						<button>SHOP</button>
 					</div>
 				</article>
 			</section>
