--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<nav>
 		<p class="winkelwagen1">1</p>
 		<p class="winkelwagen2">2</p>
-		<img onclick="OpenMenu()" src="/images/hamburgermenu.png" alt="menu">
+		<img class="hamburgerImg" src="/images/hamburgermenu.png" alt="Klik voor menu">
 		<h1><a href="/gezichtscrèmes.html"> <img src="/images/logo.webp" alt="Rituals Logo"></a></h1>
 		<a href="/gezichtscrèmes.html"> <img src="/images/loop.png" alt="zoeken"></a>
 		<a href="/gezichtscrèmes.html"> <img src="/images/profiel.png" alt="mijn profiel"></a>
@@ -25,7 +25,7 @@
 	</nav>
 	<nav class="hamburgermenu">
 
-			<img onclick="CloseMenu()" src="/images/kruis.png" alt="Kruisje">
+			<img class="kruisjeImg" src="/images/kruis.png" alt="Kruisje">
 		
 		<p>Nieuw</p>
 		<p>Body</p>
@@ -42,6 +42,7 @@
 
 	<main>
 		<audio src="/sounds/santa-claus-laughing-63389.mp3"></audio>
+		<!-- Bron: https://pixabay.com/ -->
 
 		<!-- section 1 -->
 		<section>
@@ -52,7 +53,7 @@
 			<h2>The Ritual of Advent</h2>
 			<p>Beleef elke dag op een betekenisvolle mannier met The Ritual of Advent - en profiteer van onze beste
 				deals ooit.*</p>
-				<button class="kerst" onclick="ChangeColors()">KIES JE KALENDER</button>
+				<button class="kerst">KIES JE KALENDER</button>
 		</section>
 
 		<!-- section 2 -->
@@ -116,7 +117,7 @@
 					<h5>Home perfume</h5>
 					<p>The Ritual of Hammam, huisparfum, 500 ml</p>
 					<p>€29,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -124,7 +125,7 @@
 					<h5>Body Lotion Mousse</h5>
 					<p>The Ritual of Hammam, bodylotion mousse, 150 ml</p>
 					<p>€29,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -132,7 +133,7 @@
 					<h5>Bath Foam</h5>
 					<p>The Ritual of Hammam, badschuim, 500 ml</p>
 					<p>€29,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -140,7 +141,7 @@
 					<h5>Foaming Shower Gell</h5>
 					<p>The Ritual of Hammam, doucheschuim, 200 ml</p>
 					<p>€29,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -148,7 +149,7 @@
 					<h5>Salt body scrub</h5>
 					<p>The Ritual of Hammam, bodyscrub met grof zout, 300 gr</p>
 					<p>€29,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -156,7 +157,7 @@
 					<h5>Massage Oil</h5>
 					<p>The Ritual of Hammam, massageolie, 100 ml</p>
 					<p>€14,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -164,7 +165,7 @@
 					<h5>Black Soap</h5>
 					<p>The Ritual of Hammam, zwarte zeep, 150 ml</p>
 					<p>€9,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -172,7 +173,7 @@
 					<h5>Body Cream</h5>
 					<p>The Ritual of Hammam, bodycrème, 220 ml</p>
 					<p>€19,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -180,7 +181,7 @@
 					<h5>Hair & Body Mist</h5>
 					<p> The Ritual of Hammam, mist voor haar & lichaam, 50 ml</p>
 					<p>€19,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 			</div>
 			<!-- bron: https://www.w3schools.com/cssref/css3_pr_overflow-y.php -->
@@ -219,7 +220,7 @@
 					<h5>Hand Balm</h5>
 					<p>The Ritual of Hammam, handbalsem, 175 ml</p>
 					<p>€11,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -227,7 +228,7 @@
 					<h5>Refill Fragrance Sticks</h5>
 					<p>The Ritual of Hammam, navulling geurstokjes, 250 ml</p>
 					<p>€27,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -235,7 +236,7 @@
 					<h5>Bath Foam</h5>
 					<p>The Ritual of Hammam, badschuim, 500 ml</p>
 					<p>€29,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -243,7 +244,7 @@
 					<h5>Home Perfume</h5>
 					<p> The Ritual of Mehr, huisparfum spray, 500 ml</p>
 					<p>€29,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -251,7 +252,7 @@
 					<h5>Refill Fragrance Sticks</h5>
 					<p>The Ritual of Jing, navulling geurstokjes, 250 ml</p>
 					<p>€27,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -259,7 +260,7 @@
 					<h5>Home Perfume</h5>
 					<p>The Ritual of Sakura, huisparfum spray, 500 ml</p>
 					<p>€29,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -267,7 +268,7 @@
 					<h5>Refill Handwash</h5>
 					<p>The Ritual of Hammam, refill handzeep, 600 ml</p>
 					<p>€18,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -275,7 +276,7 @@
 					<h5>Hand Wash</h5>
 					<p>Amsterdam Collection, luxe handzeep, 300 ml</p>
 					<p>€12,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -283,7 +284,7 @@
 					<h5>Mini Fragrance Sticks</h5>
 					<p> The Ritual of Hammam, mini geurstokjes, 70 ml</p>
 					<p>€16,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 
 				<article>
@@ -291,7 +292,7 @@
 					<h5>Scented Candle</h5>
 					<p> ammam, geurkaars, 290 gr</p>
 					<p>€24,90</p>
-					<button onclick="toggleWinkelwagen()">SHOP</button>
+					<button>SHOP</button>
 				</article>
 			</div>
 		</section>
