--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	<nav>
 		<p class="winkelwagen1">1</p>
 		<p class="winkelwagen2">2</p>
-		<img class="hamburgerImg" src="/images/hamburgermenu.png" alt="Klik voor menu">
-		<h1><a href="/gezichtscrèmes.html"> <img src="/images/logo.webp" alt="Rituals Logo"></a></h1>
-		<a href="/gezichtscrèmes.html"> <img src="/images/loop.png" alt="zoeken"></a>
-		<a href="/gezichtscrèmes.html"> <img src="/images/profiel.png" alt="mijn profiel"></a>
-		<a href="/gezichtscrèmes.html"> <img src="/images/mandje.png" alt="winkelmandje"></a>
+		<img class="hamburgerImg" src="images/hamburgermenu.png" alt="Klik voor menu">
+		<h1><a href="gezichtscrèmes.html"> <img src="images/logo.webp" alt="Rituals Logo"></a></h1>
+		<a href="gezichtscrèmes.html"> <img src="images/loop.png" alt="zoeken"></a>
+		<a href="gezichtscrèmes.html"> <img src="images/profiel.png" alt="mijn profiel"></a>
+		<a href="gezichtscrèmes.html"> <img src="images/mandje.png" alt="winkelmandje"></a>
 
 	</nav>
 	<nav class="hamburgermenu">
