--- a/gezichtscrèmes.html
+++ b/gezichtscrèmes.html
@@ -16,18 +16,18 @@
 	<nav>
 		<p class="winkelwagen1">1</p>
 		<p class="winkelwagen2">2</p>
-		<img class="hamburgerImg" src="/images/hamburgermenu.png" alt="menu">
+		<img class="hamburgerImg" src="images/hamburgermenu.png" alt="menu">
 		<!-- <a class="hamburgermenu" onclick="OpenMenu()" href="/gezichtscrèmes.html"> <img src="/images/hamburgermenu.png" alt="menu"></a> -->
-		<a href="/index.html"> <img src="/images/logo.webp" alt="Rituals Logo"></a>
+		<a href="index.html"> <img src="images/logo.webp" alt="Rituals Logo"></a>
 		<!-- <a href="/gezichtscrèmes.html"> <img src="/images/logo.webp" alt="Rituals Logo"></a> -->
-		<a href="/index.html"> <img src="/images/loop.png" alt="zoeken"></a>
-		<a href="/index.html"> <img src="/images/profiel.png" alt="mijn profiel"></a>
-		<a href="/index.html"> <img src="/images/mandje.png" alt="winkelmandje"></a>
+		<a href="index.html"> <img src="images/loop.png" alt="zoeken"></a>
+		<a href="index.html"> <img src="images/profiel.png" alt="mijn profiel"></a>
+		<a href="index.html"> <img src="images/mandje.png" alt="winkelmandje"></a>
 
 	</nav>
 	<nav class="hamburgermenu">
 		<div>
-			<img class="kruisjeImg" src="/images/kruis.png" alt="Kruisje">
+			<img class="kruisjeImg" src="images/kruis.png" alt="Kruisje">
 		</div>
 		<p>Nieuw</p>
 		<p>Body</p>
@@ -35,12 +35,12 @@
 		<p>Beauty</p>
 		<p>Cadeaus</p>
 		<p>Customise</p>
-		<a href="/gezichtscrèmes.html">Gezichtscrèmes</a>
+		<a href="gezichtscrèmes.html">Gezichtscrèmes</a>
 	</nav>
 
 	<main>
 
-		<audio class="audio2" src="/sounds/toy-singing-santa-claus-is-coming-to-town-26255.mp3"></audio>
+		<audio class="audio2" src="sounds/toy-singing-santa-claus-is-coming-to-town-26255.mp3"></audio>
 		<!-- Bron: https://pixabay.com/ -->
 
 		<h1>Gezichtscrèmes</h1>
@@ -51,7 +51,7 @@
 		<div>
 			<section>
 				<article>
-					<img src="/images/creme1.webp" alt="day cream">
+					<img src="images/creme1.webp" alt="day cream">
 					<h5>Anti-Ageing Day Cream</h5>
 					<p>The Ritual of Namaste, antiverouderende dagcrème, 50 ml</p>
 					<div>
@@ -61,7 +61,7 @@
 				</article>
 
 				<article>
-					<img src="/images/creme2.webp" alt="day cream">
+					<img src="images/creme2.webp" alt="day cream">
 					<h5>Anti-Ageing Day Cream</h5>
 					<p>The Ritual of Namaste, antiverouderende dagcrème, 50 ml</p>
 					<div>
@@ -78,7 +78,7 @@
 		<div>
 			<section>
 				<article>
-					<img src="/images/creme3.webp" alt="day cream">
+					<img src="images/creme3.webp" alt="day cream">
 					<h5>Anti-Ageing Day Cream</h5>
 					<p>The Ritual of Namaste, antiverouderende dagcrème, 50 ml</p>
 					<div>
@@ -88,7 +88,7 @@
 				</article>
 
 				<article>
-					<img src="/images/creme4.webp" alt="day cream">
+					<img src="images/creme4.webp" alt="day cream">
 					<h5>Anti-Ageing Day Cream</h5>
 					<p>The Ritual of Namaste, antiverouderende dagcrème, 50 ml</p>
 					<div>
@@ -101,7 +101,7 @@
 
 		<div>
 			<section>
-				<img src="/images/christmas.webp" alt="Rituals kerst">
+				<img src="images/christmas.webp" alt="Rituals kerst">
 				<!-- bron: https://mylondonlifestyle.com/2021/11/11/rituals-advent-calendar/ -->
 			</section>
 		</div>
