--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</nav>
 	<nav class="hamburgermenu">
 
-			<img class="kruisjeImg" src="/images/kruis.png" alt="Kruisje">
+			<img class="kruisjeImg" src="images/kruis.png" alt="Kruisje">
 		
 		<p>Nieuw</p>
 		<p>Body</p>
@@ -33,7 +33,7 @@
 		<p>Beauty</p>
 		<p>Cadeaus</p>
 		<p>Customise</p>
-		<a href="/gezichtscrèmes.html">Gezichtscrèmes</a>
+		<a href="gezichtscrèmes.html">Gezichtscrèmes</a>
 	</nav>
 
 	<header>
@@ -41,14 +41,14 @@
 	</header>
 
 	<main>
-		<audio src="/sounds/santa-claus-laughing-63389.mp3"></audio>
+		<audio src="sounds/santa-claus-laughing-63389.mp3"></audio>
 		<!-- Bron: https://pixabay.com/ -->
 
 		<!-- section 1 -->
 		<section>
 			<p class="absolute">24 MOMENTS OF JOY</p>
 			<!-- class omdat ik anders op pagina 2 ook position absolute had -->
-			<video controls autoplay muted src="/video/filmpje1.mp4"></video>
+			<video controls autoplay muted src="video/filmpje1.mp4"></video>
 			<!-- bron: https://www.w3schools.com/tags/tag_video.asp -->
 			<h2>The Ritual of Advent</h2>
 			<p>Beleef elke dag op een betekenisvolle mannier met The Ritual of Advent - en profiteer van onze beste
@@ -78,7 +78,7 @@
 			</article>
 			<article>
 				<h3>AT YOUR SERVICE</h3>
-				<h4>Ontvang online advies via <a href="/gezichtscrèmes.html">Whatsapp</a></h4>
+				<h4>Ontvang online advies via <a href="gezichtscrèmes.html">Whatsapp</a></h4>
 				<ul>
 					<li>.</li>
 					<li>.</li>
@@ -94,7 +94,7 @@
 			<p>Ontvang een 2-staps thuisspa-routine met interieurparfum en shower foam bij besteding van €45 of meer.
 			</p>
 			<button>SHOP NU</button>
-			<img src="/bannerimages/plaatje1.png" alt="The ritual of Hammam producten">
+			<img src="bannerimages/plaatje1.png" alt="The ritual of Hammam producten">
 		</section>
 
 		<!-- section 4 -->
@@ -102,8 +102,8 @@
 			<h3>The Ritual of Hammam</h3>
 			<h4>Your Authentic Spa Experience</h4>
 			<p>Ontdek onze vernieuwde thuisspa-collectie met arganolie, eucalyptus en nieuwe innovatieve producten.</p>
-			<a href="">ONTDEK THUISSPA-COLLECTIE</a>
-			<img src="/bannerimages/Plaatje2.png" alt="mensen in de sauna">
+			<a href="gezichtscrèmes.html">ONTDEK THUISSPA-COLLECTIE</a>
+			<img src="bannerimages/Plaatje2.png" alt="mensen in de sauna">
 		</section>
 
 		<!-- section 5 -->
@@ -113,7 +113,7 @@
 
 			<div>
 				<article>
-					<img src="/images/parfum1.webp" alt="parfum flesje">
+					<img src="images/parfum1.webp" alt="parfum flesje">
 					<h5>Home perfume</h5>
 					<p>The Ritual of Hammam, huisparfum, 500 ml</p>
 					<p>€29,90</p>
@@ -121,7 +121,7 @@
 				</article>
 
 				<article>
-					<img src="/images/parfum2.webp" alt="lotion flesje">
+					<img src="images/parfum2.webp" alt="lotion flesje">
 					<h5>Body Lotion Mousse</h5>
 					<p>The Ritual of Hammam, bodylotion mousse, 150 ml</p>
 					<p>€29,90</p>
@@ -129,7 +129,7 @@
 				</article>
 
 				<article>
-					<img src="/images/parfum3.webp" alt="bath foam flesje">
+					<img src="images/parfum3.webp" alt="bath foam flesje">
 					<h5>Bath Foam</h5>
 					<p>The Ritual of Hammam, badschuim, 500 ml</p>
 					<p>€29,90</p>
@@ -137,7 +137,7 @@
 				</article>
 
 				<article>
-					<img src="/images/parfum4.webp" alt="shower gel flesje">
+					<img src="images/parfum4.webp" alt="shower gel flesje">
 					<h5>Foaming Shower Gell</h5>
 					<p>The Ritual of Hammam, doucheschuim, 200 ml</p>
 					<p>€29,90</p>
@@ -145,7 +145,7 @@
 				</article>
 
 				<article>
-					<img src="/images/parfum5.webp" alt="salt body scrub">
+					<img src="images/parfum5.webp" alt="salt body scrub">
 					<h5>Salt body scrub</h5>
 					<p>The Ritual of Hammam, bodyscrub met grof zout, 300 gr</p>
 					<p>€29,90</p>
@@ -153,7 +153,7 @@
 				</article>
 
 				<article>
-					<img src="/images/parfum6.webp" alt="massage oil flesje">
+					<img src="images/parfum6.webp" alt="massage oil flesje">
 					<h5>Massage Oil</h5>
 					<p>The Ritual of Hammam, massageolie, 100 ml</p>
 					<p>€14,90</p>
@@ -161,7 +161,7 @@
 				</article>
 
 				<article>
-					<img src="/images/parfum7.webp" alt="zwarte zeep flesje">
+					<img src="images/parfum7.webp" alt="zwarte zeep flesje">
 					<h5>Black Soap</h5>
 					<p>The Ritual of Hammam, zwarte zeep, 150 ml</p>
 					<p>€9,90</p>
@@ -169,7 +169,7 @@
 				</article>
 
 				<article>
-					<img src="/images/parfum8.webp" alt="Body cream flesje">
+					<img src="images/parfum8.webp" alt="Body cream flesje">
 					<h5>Body Cream</h5>
 					<p>The Ritual of Hammam, bodycrème, 220 ml</p>
 					<p>€19,90</p>
@@ -177,7 +177,7 @@
 				</article>
 
 				<article>
-					<img src="/images/parfum9.webp" alt="Hair en body mist flesje">
+					<img src="images/parfum9.webp" alt="Hair en body mist flesje">
 					<h5>Hair & Body Mist</h5>
 					<p> The Ritual of Hammam, mist voor haar & lichaam, 50 ml</p>
 					<p>€19,90</p>
@@ -194,8 +194,8 @@
 			<p>Kies voor de serums van The Ritual of Jing om te ontspannen en je nachtrust te bevorderen. Nu voor €10,50
 				in
 				plaats van €13,90.*</p>
-			<a href="">SHOP JING SERUMS</a>
-			<img src="/bannerimages/plaatjesection6.png" alt="Ritual of Jing flesjes">
+			<a href="gezichtscrèmes.html">SHOP JING SERUMS</a>
+			<img src="bannerimages/plaatjesection6.png" alt="Ritual of Jing flesjes">
 		</section>
 
 		<!-- section 7 -->
@@ -205,8 +205,8 @@
 			<p>Maak kennis met onze reinigingsbars. Verkrijgbaar in zes classic geuren voor body & hair, een face bar en
 				een
 				exfoliërende scrub bar. </p>
-			<a href="">SHOP REINIGINGSBARS</a>
-			<img src="/bannerimages/plaatjesection7.png" alt="clean beauty bar">
+			<a href="gezichtscrèmes.html">SHOP REINIGINGSBARS</a>
+			<img src="bannerimages/plaatjesection7.png" alt="clean beauty bar">
 		</section>
 
 		<!-- section 8 -->
@@ -216,7 +216,7 @@
 
 			<div>
 				<article>
-					<img src="/images/scroll1.webp" alt="hand balm flesje">
+					<img src="images/scroll1.webp" alt="hand balm flesje">
 					<h5>Hand Balm</h5>
 					<p>The Ritual of Hammam, handbalsem, 175 ml</p>
 					<p>€11,90</p>
@@ -224,7 +224,7 @@
 				</article>
 
 				<article>
-					<img src="/images/scroll2.webp" alt="Geurstokjes navulling flesje">
+					<img src="images/scroll2.webp" alt="Geurstokjes navulling flesje">
 					<h5>Refill Fragrance Sticks</h5>
 					<p>The Ritual of Hammam, navulling geurstokjes, 250 ml</p>
 					<p>€27,90</p>
@@ -232,7 +232,7 @@
 				</article>
 
 				<article>
-					<img src="/images/scroll3.webp" alt="bath foam flesje">
+					<img src="images/scroll3.webp" alt="bath foam flesje">
 					<h5>Bath Foam</h5>
 					<p>The Ritual of Hammam, badschuim, 500 ml</p>
 					<p>€29,90</p>
@@ -240,7 +240,7 @@
 				</article>
 
 				<article>
-					<img src="/images/scroll4.webp" alt="Geurstokjes navulling flesje">
+					<img src="images/scroll4.webp" alt="Geurstokjes navulling flesje">
 					<h5>Home Perfume</h5>
 					<p> The Ritual of Mehr, huisparfum spray, 500 ml</p>
 					<p>€29,90</p>
@@ -248,7 +248,7 @@
 				</article>
 
 				<article>
-					<img src="/images/scroll5.webp" alt="Geurstokjes navulling flesje">
+					<img src="images/scroll5.webp" alt="Geurstokjes navulling flesje">
 					<h5>Refill Fragrance Sticks</h5>
 					<p>The Ritual of Jing, navulling geurstokjes, 250 ml</p>
 					<p>€27,90</p>
@@ -256,7 +256,7 @@
 				</article>
 
 				<article>
-					<img src="/images/scroll6.webp" alt="Huisparfum flesje">
+					<img src="images/scroll6.webp" alt="Huisparfum flesje">
 					<h5>Home Perfume</h5>
 					<p>The Ritual of Sakura, huisparfum spray, 500 ml</p>
 					<p>€29,90</p>
@@ -264,7 +264,7 @@
 				</article>
 
 				<article>
-					<img src="/images/scroll7.webp" alt="refill handwash flesje">
+					<img src="images/scroll7.webp" alt="refill handwash flesje">
 					<h5>Refill Handwash</h5>
 					<p>The Ritual of Hammam, refill handzeep, 600 ml</p>
 					<p>€18,90</p>
@@ -272,7 +272,7 @@
 				</article>
 
 				<article>
-					<img src="/images/scroll8.webp" alt="hand wash flesje">
+					<img src="images/scroll8.webp" alt="hand wash flesje">
 					<h5>Hand Wash</h5>
 					<p>Amsterdam Collection, luxe handzeep, 300 ml</p>
 					<p>€12,90</p>
@@ -280,7 +280,7 @@
 				</article>
 
 				<article>
-					<img src="/images/scroll9.webp" alt="geurstokjes">
+					<img src="images/scroll9.webp" alt="geurstokjes">
 					<h5>Mini Fragrance Sticks</h5>
 					<p> The Ritual of Hammam, mini geurstokjes, 70 ml</p>
 					<p>€16,90</p>
@@ -288,7 +288,7 @@
 				</article>
 
 				<article>
-					<img src="/images/scroll10.webp" alt="Hair en body mist flesje">
+					<img src="images/scroll10.webp" alt="Hair en body mist flesje">
 					<h5>Scented Candle</h5>
 					<p> ammam, geurkaars, 290 gr</p>
 					<p>€24,90</p>
@@ -303,8 +303,8 @@
 			<h4>Body Lotion Mouse</h4>
 			<p>Verwen je huid na het douchen met een unieke, snel absorberende mousse. Nu verkrijgbaar in vier geuren.
 			</p>
-			<a href="">SHOP BODY LOTION MOUSSE</a>
-			<img src="/bannerimages/plaatjesection9.png" alt="">
+			<a href="gezichtscrèmes.html">SHOP BODY LOTION MOUSSE</a>
+			<img src="bannerimages/plaatjesection9.png" alt="">
 		</section>
 
 		<!-- section 10 -->
@@ -313,8 +313,8 @@
 			<h4>De Must-have dagcrème</h4>
 			<p>LINDA.lab heeft onze nieuwe dagcrème getest en de resultaten zijn fantastisch! 84% van de testers is mega
 				fan.</p>
-			<a href="">SHOP DAGCRÈME</a>
-			<img src="/bannerimages/plaatjesection10.png" alt="Getest door de lezers van Linda">
+			<a href="gezichtscrèmes.html">SHOP DAGCRÈME</a>
+			<img src="bannerimages/plaatjesection10.png" alt="Getest door de lezers van Linda">
 		</section>
 
 		<!-- section 11 -->
@@ -324,8 +324,8 @@
 			<p>Koop een refill en wij planten een boom. Kies voor eco-chic refills in plaats van een nieuw product om
 				onze
 				hulpbronnen te behouden.</p>
-			<a href="">ONTDEK MEER</a>
-			<img src="/bannerimages/plaatjesection11.png" alt="vijfer met bomen">
+			<a href="gezichtscrèmes.html">ONTDEK MEER</a>
+			<img src="bannerimages/plaatjesection11.png" alt="vijfer met bomen">
 		</section>
 
 		<!-- section 12 -->
@@ -335,10 +335,10 @@
 			<p>We nemen je mee in de wondere wereld van het ingrediënt eucaluptus en vertellen je alles over haar
 				krachtige
 				werking.</p>
-			<a href="">ONTDEK MEER</a>
+			<a href="gezichtscrèmes.html">ONTDEK MEER</a>
 
-			<img src="/bannerimages/plaatjesection12.png" alt="vrouw smeert bodylotion">
-			<img src="/bannerimages/plaatje2section12.png" alt="vrouw op smartphone">
+			<img src="bannerimages/plaatjesection12.png" alt="vrouw smeert bodylotion">
+			<img src="bannerimages/plaatje2section12.png" alt="vrouw op smartphone">
 		</section>
 
 		<!-- section 13 -->
@@ -348,7 +348,7 @@
 			<p>Inschrijven is gratis en als member krijg je toegang tot de vele voordelen; van luxe cadeaus tot
 				bijzondere
 				experiences. Schrijf je in en ontvang direct een cadeau bij je tweede aankoop.</p>
-			<a href="">MELD JE AAN</a>
+			<button>MELD JE AAN</button>
 		</section>
 
 		<p>* Door deel te nemen aan onze promoties ga je automatisch akkoord met onze voorwaarden.</p>
