--- a/gezichtscrèmes.html
+++ b/gezichtscrèmes.html
@@ -18,11 +18,11 @@
 		<p class="winkelwagen2">2</p>
 		<img class="hamburgerImg" src="images/hamburgermenu.png" alt="menu">
 		<!-- <a class="hamburgermenu" onclick="OpenMenu()" href="/gezichtscrèmes.html"> <img src="/images/hamburgermenu.png" alt="menu"></a> -->
-		<a href="index.html"> <img src="images/logo.webp" alt="Rituals Logo"></a>
+		<a href=index.html> <img src="images/logo.webp" alt="Rituals Logo"></a>
 		<!-- <a href="/gezichtscrèmes.html"> <img src="/images/logo.webp" alt="Rituals Logo"></a> -->
-		<a href="index.html"> <img src="images/loop.png" alt="zoeken"></a>
-		<a href="index.html"> <img src="images/profiel.png" alt="mijn profiel"></a>
-		<a href="index.html"> <img src="images/mandje.png" alt="winkelmandje"></a>
+		<a href=index.html> <img src="images/loop.png" alt="zoeken"></a>
+		<a href=index.html> <img src="images/profiel.png" alt="mijn profiel"></a>
+		<a href=index.html> <img src="images/mandje.png" alt="winkelmandje"></a>
 
 	</nav>
 	<nav class="hamburgermenu">
@@ -35,7 +35,7 @@
 		<p>Beauty</p>
 		<p>Cadeaus</p>
 		<p>Customise</p>
-		<a href="gezichtscrèmes.html">Gezichtscrèmes</a>
+		<a href=gezichtscrèmes.html>Gezichtscrèmes</a>
 	</nav>
 
 	<main>
