--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		<p class="winkelwagen1">1</p>
 		<p class="winkelwagen2">2</p>
 		<img class="hamburgerImg" src="images/hamburgermenu.png" alt="Klik voor menu">
-		<h1><a href="gezichtscremes.html"> <img src="images/logo.webp" alt="Rituals Logo"></a></h1>
-		<a href="gezichtscremes.html"> <img src="images/loop.png" alt="zoeken"></a>
-		<a href="gezichtscremes.html"> <img src="images/profiel.png" alt="mijn profiel"></a>
-		<a href="gezichtscremes.html"> <img src="images/mandje.png" alt="winkelmandje"></a>
+		<h1><a href="/gezichtscremes.html"> <img src="images/logo.webp" alt="Rituals Logo"></a></h1>
+		<a href="/gezichtscremes.html"> <img src="images/loop.png" alt="zoeken"></a>
+		<a href="/gezichtscremes.html"> <img src="images/profiel.png" alt="mijn profiel"></a>
+		<a href="/gezichtscremes.html"> <img src="images/mandje.png" alt="winkelmandje"></a>
 
 	</nav>
 	<nav class="hamburgermenu">
