--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<p>Beauty</p>
 		<p>Cadeaus</p>
 		<p>Customise</p>
-		<a href="gezichtscremes.html">Gezichtscrèmes</a>
+		<a href="/gezichtscremes.html">Gezichtscrèmes</a>
 	</nav>
 
 	<header>
@@ -78,7 +78,7 @@
 			</article>
 			<article>
 				<h3>AT YOUR SERVICE</h3>
-				<h4>Ontvang online advies via <a href="gezichtscremes.html">Whatsapp</a></h4>
+				<h4>Ontvang online advies via <a href="/gezichtscremes.html">Whatsapp</a></h4>
 				<ul>
 					<li>.</li>
 					<li>.</li>
@@ -102,7 +102,7 @@
 			<h3>The Ritual of Hammam</h3>
 			<h4>Your Authentic Spa Experience</h4>
 			<p>Ontdek onze vernieuwde thuisspa-collectie met arganolie, eucalyptus en nieuwe innovatieve producten.</p>
-			<a href="gezichtscremes.html">ONTDEK THUISSPA-COLLECTIE</a>
+			<a href="/gezichtscremes.html">ONTDEK THUISSPA-COLLECTIE</a>
 			<img src="bannerimages/Plaatje2.png" alt="mensen in de sauna">
 		</section>
 
@@ -194,7 +194,7 @@
 			<p>Kies voor de serums van The Ritual of Jing om te ontspannen en je nachtrust te bevorderen. Nu voor €10,50
 				in
 				plaats van €13,90.*</p>
-			<a href="gezichtscremes.html">SHOP JING SERUMS</a>
+			<a href="/gezichtscremes.html">SHOP JING SERUMS</a>
 			<img src="bannerimages/plaatjesection6.png" alt="Ritual of Jing flesjes">
 		</section>
 
@@ -205,7 +205,7 @@
 			<p>Maak kennis met onze reinigingsbars. Verkrijgbaar in zes classic geuren voor body & hair, een face bar en
 				een
 				exfoliërende scrub bar. </p>
-			<a href="gezichtscremes.html">SHOP REINIGINGSBARS</a>
+			<a href="/gezichtscremes.html">SHOP REINIGINGSBARS</a>
 			<img src="bannerimages/plaatjesection7.png" alt="clean beauty bar">
 		</section>
 
@@ -303,7 +303,7 @@
 			<h4>Body Lotion Mouse</h4>
 			<p>Verwen je huid na het douchen met een unieke, snel absorberende mousse. Nu verkrijgbaar in vier geuren.
 			</p>
-			<a href="gezichtscremes.html">SHOP BODY LOTION MOUSSE</a>
+			<a href="/gezichtscremes.html">SHOP BODY LOTION MOUSSE</a>
 			<img src="bannerimages/plaatjesection9.png" alt="">
 		</section>
 
@@ -313,7 +313,7 @@
 			<h4>De Must-have dagcrème</h4>
 			<p>LINDA.lab heeft onze nieuwe dagcrème getest en de resultaten zijn fantastisch! 84% van de testers is mega
 				fan.</p>
-			<a href="gezichtscremes.html">SHOP DAGCRÈME</a>
+			<a href="/gezichtscremes.html">SHOP DAGCRÈME</a>
 			<img src="bannerimages/plaatjesection10.png" alt="Getest door de lezers van Linda">
 		</section>
 
@@ -324,7 +324,7 @@
 			<p>Koop een refill en wij planten een boom. Kies voor eco-chic refills in plaats van een nieuw product om
 				onze
 				hulpbronnen te behouden.</p>
-			<a href="gezichtscremes.html">ONTDEK MEER</a>
+			<a href="/gezichtscremes.html">ONTDEK MEER</a>
 			<img src="bannerimages/plaatjesection11.png" alt="vijfer met bomen">
 		</section>
 
@@ -335,7 +335,7 @@
 			<p>We nemen je mee in de wondere wereld van het ingrediënt eucaluptus en vertellen je alles over haar
 				krachtige
 				werking.</p>
-			<a href="gezichtscremes.html">ONTDEK MEER</a>
+			<a href="/gezichtscremes.html">ONTDEK MEER</a>
 
 			<img src="bannerimages/plaatjesection12.png" alt="vrouw smeert bodylotion">
 			<img src="bannerimages/plaatje2section12.png" alt="vrouw op smartphone">
