--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			<h4>Your Authentic Spa Experience</h4>
 			<p>Ontdek onze vernieuwde thuisspa-collectie met arganolie, eucalyptus en nieuwe innovatieve producten.</p>
 			<a href="gezichtscremes.html">ONTDEK THUISSPA-COLLECTIE</a>
-			<img src="bannerimages/Plaatje2.png" alt="mensen in de sauna">
+			<img src="bannerimages/plaatje2.png" alt="mensen in de sauna">
 		</section>
 
 		<!-- section 5 -->
